tests/core/snapshots/add-field-with-modify.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user1": "Leanne Graham"
    }
  }
}
