tests/core/snapshots/add-field-with-modify.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user2": "Ervin Howell"
    }
  }
}
