tests/core/snapshots/add-field-with-modify.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  person1: User
  person2: User
  user1: String
  user2: String
}

type User {
  name: String
}

schema {
  query: Query
}
