tests/core/snapshots/add-field.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Address {
  geo: Geo
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

type Geo {
  lat: String
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type User {
  address: Address
  lat: String
}

schema {
  query: Query
}
