tests/core/snapshots/apollo-federation-entities-batch.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(enableFederation: true, port: 8000)
  @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 100, headers: []}, httpCache: 42) {
  query: Query
}

scalar _Any

union _Entity = Post | User

type Post
  @graphQL(args: [{key: "id", value: "{{.value.id}}"}], baseURL: "http://upstream/graphql", batch: true, name: "post")
  @key(fields: "id") {
  id: Int!
  title: String!
}

type Query {
  """
  Apollo federation Query._entities resolver
  """
  _entities(representations: [_Any!]!): [_Entity]!
  """
  Apollo federation Query._service resolver
  """
  _service: _Service!
  user(id: Int!): User @http(path: "/users/{{.args.id}}")
}

type User @http(batchKey: ["id"], path: "/users", query: [{key: "id", value: "{{.value.id}}"}]) @key(fields: "id") {
  id: Int!
  name: String!
}

type _Service {
  sdl: String
}
