tests/core/snapshots/apollo-federation-entities-validation.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Type resolver can't use `.args`, use `.value` instead",
    "trace": [
      "Post",
      "http",
      "query"
    ],
    "description": null
  },
  {
    "message": "Type resolver can't use `.args`, use `.value` instead",
    "trace": [
      "User",
      "call"
    ],
    "description": null
  }
]
